Use .valueOf()