@@ -39,12 +39,12 @@ public class PGBigDecimal implements PGType
 	            case Types.BIT:
 	                return new PGBoolean( val.doubleValue() == 0?Boolean.FALSE:Boolean.TRUE );            
 	            case Types.BIGINT:
-	                return new PGLong( new Long( val.longValue() ) );
+	                return new PGLong( Long.valueOf( val.longValue() ) );
 	            case Types.INTEGER:
-	                return new PGInteger( new Integer( val.intValue() ) ) ;
+	                return new PGInteger( Integer.valueOf( val.intValue() ) ) ;
 	            case Types.SMALLINT:
 	            case Types.TINYINT:
-	                return new PGShort( new Short( val.shortValue() ) );
+	                return new PGShort( Short.valueOf( val.shortValue() ) );
 	            case Types.VARCHAR:
 	            case Types.LONGVARCHAR:
 	                return new PGString( val.toString() );
